# CMS

./: .gitignore  labreport1.odt  pyproject.toml  readme.md
CMS/: settings.py  urls.py
account/: admin.py  apps.py  forms.py  models.py  perm_checkers.py  signals.py  views.py
account/migrations/: 0001_initial.py  0002_account_phone_number.py  0003_account_address.py  0004_account_faculty.py  0005_alter_account_phone_number.py  0006_alter_account_phone_number.py  0007_alter_account_phone_number.py  0008_alter_account_phone_number.py  0008_alter_account_phone_number_attendance.py
account/templates/: adash.html  attendance.html  login.html  logout.html  pchange.html  register.html  sdash.html  tdash.html
accounts/: forms.py  views.py
accounts/templates/: login.html  register.html
course/: views.py
course/templates/: course_detail.html  student-by-semester.html
faculty/: admin.py  forms.py  models.py  views.py
faculty/migrations/: 0001_initial.py  0002_remove_course_notice_remove_course_semester_and_more.py  0003_rename_course_faculty.py  0004_subject.py  0005_alter_faculty_name_alter_subject_faculty_and_more.py  0006_alter_subject_teacher.py  0007_alter_subject_teacher.py  0008_subject_notice.py  0009_alter_subject_notice.py  0010_assignment.py  0011_alter_assignment_subject.py  0012_alter_assignment_assignment_file.py  0013_alter_assignment_title.py  0014_assignment_submitted_by.py  0015_remove_assignment_submitted_by_and_more.py  (+4 more)
media/: New_Text_Document.txt
student/: views.py
templates/: 403.html  404.html  index.html  navbar.html
(+14 files in other folders)
